added pyproject, uv lock, readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,30 @@ build-backend = "hatchling.build"
 
 [project]
 name = "notion-inbox-agent"
-version = "1.0"
+version = "0.1.0"
+description = "Notion integrated AI-powered processing, ranking and enrichment for inbox notes"
+requires-python = ">=3.11"
+
+dependencies = [
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "openai>=1.0.0",
+    "notion-client>=2.0.0",
+    "python-dotenv>=1.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["inbox_agent"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = ["-ra", "--strict-markers"]
+markers = [
+]
