refactor: update Notion database and data source ID names for clarity

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,15 @@
 NOTION_TOKEN=secret_your_integration_token_here
 
 # Notion Database ID for tasks (from database URL)
-NOTION_DATABASE_ID=your_database_id_here
+NOTION_PROJECTS_DATABASE_ID=your_database_id_here
 
-# Notion Data Source ID for projects
+# Notion Data Source ID for projects (from Database retrieval)
 NOTION_PROJECTS_DATA_SOURCE_ID=your_data_source_id_here
 
-# Notion Data Source ID for tasks database
+# Notion Database ID for tasks (from database URL)
+NOTION_TASKS_DATABASE_ID=your_tasks_database_id_here
+
+# Notion Data Source ID for tasks database (from Database retrieval)
 NOTION_TASKS_DATA_SOURCE_ID=your_task_data_source_id_here
 
 # Notion Page ID for elaboration (legacy)
