refactor: rename Notion database ID for clarity and update task creation logic to match schema feat: add integration tests for toggle block creation and enhance test suite documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,6 @@ packages = ["inbox_agent"]
 testpaths = ["tests"]
 addopts = ["-ra", "--strict-markers"]
 markers = [
+    "integration: mark test as integration test (requires API access)",
+    "unit: mark test as unit test (no external dependencies)",
 ]
