refactor: clean up .gitignore by removing specific notebook entries and adding logs directory

--- a/.gitignore
+++ b/.gitignore
@@ -258,10 +258,7 @@ $RECYCLE.BIN/
 # Project
 reports/
 mlflow/
-notebooks/agent-learning.ipynb
-notebooks/notion.ipynb
-
-# Other
+logs/
 instructions/
 notebooks/
 output/results/
