feat: add runtime mode configuration and implement test mode functionality

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ NOTION_INBOX_PAGE_ID=your_page_id_here
 
 # Google API Key (for Gemini/Gemma models)
 GOOGLE_API_KEY=your_google_api_key_here
+
+# PROD (real APIs) or TEST (dry-run with dummy LLM + debug task files)
+RUNTIME_MODE=PROD
