feat: enhance runtime mode with DEBUG option and update logging for task creation. Creating task test skipped

--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,7 @@ NOTION_INBOX_PAGE_ID=your_page_id_here
 # Google API Key (for Gemini/Gemma models)
 GOOGLE_API_KEY=your_google_api_key_here
 
-# PROD (real APIs) or TEST (dry-run with dummy LLM + debug task files)
+# PROD: real LLM APIs + create tasks in Notion
+# TEST: dummy LLM responses (0.5s delay) + debug task files only
+# DEBUG: real LLM APIs + debug task files only (no Notion creation)
 RUNTIME_MODE=PROD
