feat: add support for EVAL runtime mode in task management and configuration

--- a/.env.example
+++ b/.env.example
@@ -25,4 +25,5 @@ GOOGLE_API_KEY=your_google_api_key_here
 # PROD: real LLM APIs + create tasks in Notion
 # TEST: dummy LLM responses (0.5s delay) + debug task files only
 # DEBUG: real LLM APIs + debug task files only (no Notion creation)
+# EVAL: real LLM APIs + create tasks in Notion + debug task
 RUNTIME_MODE=PROD
