--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dev = [
     "pytest-mock>=3.12.0",
     "jupyter>=1.0.0",
     "ipykernel>=6.0.0",
+    "numpy>=2.4.2",
+    "matplotlib>=3.10.8",
 ]
 
 [tool.hatch.build.targets.wheel]
